# mini-kernel

./: .gitignore  Cargo.toml  README.md  fledge.json  run.sh
.cargo/: config.toml
src/: main.rs  vga_buffer.rs
